# softbody

./: .gitignore  CMakeLists.txt
src/: Bunny.h  CMakeLists.txt  Cube.cpp  Face.cpp  Face.h  Manager.h  Particle.cpp  Particle.h  Scene.h  Simulation.cpp  Simulation.h  Spring.cpp  Spring.h  State.cpp  State.h  main.cpp  utils.h
tests/: CMakeLists.txt  main.cpp  test.cpp  test.h
