
FILE(GLOB_RECURSE SOURCES "[^main]*.cpp")
FILE(GLOB_RECURSE HEADERS "*.h")

ADD_LIBRARY("lib${CMAKE_PROJECT_NAME}" ${SOURCES} ${HEADERS})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} main.cpp)

TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} "lib${CMAKE_PROJECT_NAME}")

FIND_PACKAGE(Eigen3 3.3 NO_MODULE)
IF(${Eigen3_FOUND})
    TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} Eigen3::Eigen)
    TARGET_LINK_LIBRARIES("lib${CMAKE_PROJECT_NAME}" Eigen3::Eigen)
ELSE()
    # Mark as SYSTEM to suppress warnings from using it.
    SET(EIGEN3_INCLUDE_DIR "./lib/eigen-3.4.0")
    INCLUDE_DIRECTORIES(SYSTEM ${EIGEN3_INCLUDE_DIR})
ENDIF()

TARGET_INCLUDE_DIRECTORIES("lib${CMAKE_PROJECT_NAME}" PUBLIC ".")

SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME} PROPERTIES CXX_STANDARD 23)
SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)

SET_TARGET_PROPERTIES("lib${CMAKE_PROJECT_NAME}" PROPERTIES CXX_STANDARD 23)
SET_TARGET_PROPERTIES("lib${CMAKE_PROJECT_NAME}" PROPERTIES LINKER_LANGUAGE CXX)
