ADD_EXECUTABLE(Test main.cpp test.h)

FIND_PACKAGE(Eigen3 3.3 NO_MODULE)
IF(${Eigen3_FOUND})
    TARGET_LINK_LIBRARIES(Test Eigen3::Eigen)
ELSE()
    # Mark as SYSTEM to suppress warnings from using it.
    SET(EIGEN3_INCLUDE_DIR "./lib/eigen-3.4.0")
    INCLUDE_DIRECTORIES(SYSTEM ${EIGEN3_INCLUDE_DIR})
ENDIF()

TARGET_LINK_LIBRARIES(Test "lib${CMAKE_PROJECT_NAME}")

SET_TARGET_PROPERTIES(Test PROPERTIES CXX_STANDARD 23)
SET_TARGET_PROPERTIES(Test PROPERTIES LINKER_LANGUAGE CXX)
